--- a/AppCoder/template/AppCoder/autores_list.html
+++ b/AppCoder/template/AppCoder/autores_list.html
@@ -3,7 +3,16 @@
 {% block contenidoQueCambia %}
 <h1>Este es el listado de autores</h1>
 {% for autor in object_list %} <!-- object_list es una lista de autores -->
-<li>{{autor}}</li>
+<br>
+<br>
+<div class="card mb-4">
+  
+  <div class="card-body">
+    <li>{{autor}}</li>
+
+  </div>
+</div>  
+
 <button>
   <a href="{% url 'autores_detalle' autor.id %}">Detalle</a>
 </button>
