--- a/AppCoder/template/AppCoder/editar_perfil.html
+++ b/AppCoder/template/AppCoder/editar_perfil.html
@@ -10,5 +10,6 @@
   </table>
   <input type="submit" value="Guardar">
 </form>
-
+<br/>
+<p><a href="{% url 'inicio' %}">Volver al inicio</a></p> 
 {% endblock %}
