--- a/AppCoder/template/AppCoder/posts_confirm_delete.html
+++ b/AppCoder/template/AppCoder/posts_confirm_delete.html
@@ -10,7 +10,7 @@
       <input type="submit" value="SI">
 
       
-      <a href="{% url 'posts_lista' %}" class = "btn btn-success"> No, volver al listado</a>
+      <a href="{% url 'posts_list' %}" class = "btn btn-success"> No, volver al listado</a>
      
      
      
