--- a/AppCoder/template/AppCoder/posts_list.html
+++ b/AppCoder/template/AppCoder/posts_list.html
@@ -1,9 +1,19 @@
 {% extends "AppCoder/padre.html" %}
 {% load static %}
 {% block contenidoQueCambia %}
-<h1>Esta es la sección de ESTUDIANTES</h1>
-{% for estudiante in object_list %} <!-- object_list es una lista de estudiantes -->
-<li>{{estudiante}}</li>
+<h1>Esta es la sección de las historias</h1>
+{% for post in object_list %} <!-- object_list es una lista de post -->
+
+<br>
+<br>
+<div class="card mb-4">
+  
+  <div class="card-body">
+    <li>{{post}}</li>
+
+  </div>
+</div>  
+
 
 <button>
   <a href="{% url 'posts_detalle' post.id %}">Detalle</a>
